environments/d9d0a971c0a80a641c20b13d99a48576-5898f18a3b700300d901655593efc43a-1/aap-instance/base/hub_route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-sandbox
    argocd.argoproj.io/sync-wave: "4"
  name: d9d0a971c0a80a641c20b13d99a48576-5898f18a3b700300d901655593efc43a-1-hub
  labels:
    app.kubernetes.io/managed-by: hub-operator
    app.kubernetes.io/instance: ${BRANCH_NAME}-${TEAM_NAME}-${INSTANCE_ID}
    app.kubernetes.io/part-of: d9d0a971c0a80a641c20b13d99a48576-5898f18a3b700300d901655593efc43a-1-hub
spec:
  host: 5898f18a3b700300d901655593efc43a-hub-1.apps.cluster-ljlsm.ljlsm.sandbox1851.opentlc.com
  to:
    kind: Service
    name: d9d0a971c0a80a641c20b13d99a48576-5898f18a3b700300d901655593efc43a-1-hub-api-svc
    weight: 100
  port:
    targetPort: api-24817
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
